--- a/NewSourceCode/Braingle/Braingle-Info.plist
+++ b/NewSourceCode/Braingle/Braingle-Info.plist
@@ -18,7 +18,7 @@
 		<string>Icon-Small@2x.png</string>
 	</array>
 	<key>CFBundleIdentifier</key>
-	<string>com.oclocksoftware.Braingle</string>
+	<string>com.olefsky.braingle2</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
