--- a/NewSourceCode/Braingle/Braingle-Info.plist
+++ b/NewSourceCode/Braingle/Braingle-Info.plist
@@ -10,19 +10,40 @@
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFiles</key>
 	<array>
-		<string>Icon.png</string>
-		<string>Icon@2x.png</string>
-		<string>Icon-72.png</string>
-		<string>Icon-Small-50.png</string>
-		<string>Icon-Small.png</string>
-		<string>Icon-Small@2x.png</string>
+		<string>bs_29.png</string>
+		<string>bs_50.png</string>
+		<string>bs_58.png</string>
+		<string>bs_100.png</string>
+		<string>icon57@2x.png</string>
+		<string>icon72@2x.png</string>
+		<string>icon57.png</string>
+		<string>icon72.png</string>
 	</array>
+	<key>CFBundleIcons</key>
+	<dict>
+		<key>CFBundlePrimaryIcon</key>
+		<dict>
+			<key>CFBundleIconFiles</key>
+			<array>
+				<string>bs_29.png</string>
+				<string>bs_50.png</string>
+				<string>bs_58.png</string>
+				<string>bs_100.png</string>
+				<string>icon57@2x.png</string>
+				<string>icon72.png</string>
+				<string>icon72@2x.png</string>
+				<string>icon57.png</string>
+			</array>
+			<key>UIPrerenderedIcon</key>
+			<true/>
+		</dict>
+	</dict>
 	<key>CFBundleIdentifier</key>
 	<string>com.olefsky.braingle2</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>Braingle</string>
+	<string>$(PRODUCT_NAME)</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
@@ -39,6 +60,16 @@
 	<array>
 		<string>armv7</string>
 	</array>
+	<key>UIStatusBarTintParameters</key>
+	<dict>
+		<key>UINavigationBar</key>
+		<dict>
+			<key>Style</key>
+			<string>UIBarStyleDefault</string>
+			<key>Translucent</key>
+			<false/>
+		</dict>
+	</dict>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
